<resources>
    <string name="app_name">BonManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Statistics</string>
    <string name="add_receipt">Add receipt</string>
    <string name="add_image">Add image to process</string>
    <string name="image_of_receipt">Image of receipt</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="hint_nume">...Nume...</string>
    <string name="hint_total">...Total...</string>
    <string name="hint_data">...dd/mm/yyyy...</string>
    <string name="hint_ora">...hh:mm...</string>
    <string name="hint_tva">...TVA...</string>
    <string name="ora">Ora</string>
    <string name="data">Data</string>
    <string name="cif">CIF</string>
    <string name="total">Total</string>
    <string name="nume_comerciant">Nume comerciant</string>
    <string name="tva">TVA</string>
    <string name="produse_tabel">Products</string>
    <string name="preturi">Preturi</string>
    <string name="hint_produse">...Produse...</string>
    <string name="hint_preturi">...Preturi...</string>
    <string name="pret_total">Price</string>
    <string name="cantitate">Quantity</string>
    <string name="produse">Produse</string>
    <string name="filters">Filters</string>
    <string name="date_range">Date range</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
</resources>