<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReceiptActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/receipt_icon"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo" />

    <ImageButton
        android:background="@android:color/transparent"
        android:id="@+id/receipt_delete_btn"
        android:maxWidth="45dp"
        android:maxHeight="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/delete_btn"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"
        android:visibility="visible" />

    <ImageButton
        android:background="@android:color/transparent"
        android:id="@+id/receipt_edit_btn"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/edit_btn"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"
        android:visibility="visible" />

    <ImageButton
        android:background="@android:color/transparent"
        android:id="@+id/receipt_discard_btn"
        android:maxWidth="45dp"
        android:maxHeight="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/close_btn"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"
        android:visibility="gone" />

    <ImageButton
        android:background="@android:color/transparent"
        android:id="@+id/receipt_save_btn"
        android:maxWidth="45dp"
        android:maxHeight="45dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/save_icon"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_image"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/nume_comerciant_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingVertical="5dp"
        android:layout_marginTop="130dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nume_comerciant"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/nume_comerciant_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="@string/hint_nume"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/total_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nume_comerciant_view_item"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/total_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="@string/hint_total"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cif_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/total_view_item"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cif"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/cif_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="RO..."
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/data_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/cif_view_item"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/data_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="@string/hint_data"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ora_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_view_item"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ora"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ora_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:textSize="22sp"
                android:hint="@string/hint_ora"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tva_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/ora_view_item"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tva"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/tva_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="@string/hint_tva"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="19%, 9%, 5%" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/produse_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/tva_view_item"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/produse"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/produse_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="@color/black"
                android:hint="@string/hint_produse"
                android:inputType="none"
                android:enabled="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@null"
                android:autofillHints="no" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/preturi_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/produse_view_item"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preturi"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/preturi_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:background="@null"
                android:clickable="false"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/hint_preturi"
                android:inputType="none"
                android:text=""
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>